--- a/.github/workflows/my-workflows.yml
+++ b/.github/workflows/my-workflows.yml
@@ -18,4 +18,6 @@ jobs:
       env:
         DATES: ${{ steps.date.outputs.date }}
       run: |
-        echo $DATES
+        docker build . -t rahilwisdom/flaskimages:$DATES
+        docker images
+        docker run --name Flask-container -p 5000:5000 rahilwisdom/flaskimages:$DATES
