--- a/.github/workflows/my-workflows.yml
+++ b/.github/workflows/my-workflows.yml
@@ -16,7 +16,7 @@ jobs:
     - uses: actions/checkout@v3
     - name: Get current date
       id: date
-      run: echo "::set-output name=date::$(date +'%Y-%m-%d')"
+      run: echo "::set-output name=date::$(date +'%s')"
       
     - name: Build the Docker image
       env:
