--- a/.github/workflows/my-workflows.yml
+++ b/.github/workflows/my-workflows.yml
@@ -24,3 +24,4 @@ jobs:
       run: |
         docker build -t rahilwisdom/flaskimages:$DATES .
         docker images
+        docker run --name flaskcontainer -p 5000:5000 rahilwisdom/flaskimages:$DATES
