--- a/.github/workflows/my-workflows.yml
+++ b/.github/workflows/my-workflows.yml
@@ -25,3 +25,4 @@ jobs:
         docker build -t rahilwisdom/flaskimages:$DATES .
         docker images
         docker run --name flaskcontainer -p 5000:5000 rahilwisdom/flaskimages:$DATES
+        docker ps
