--- a/.github/workflows/my-workflows.yml
+++ b/.github/workflows/my-workflows.yml
@@ -9,7 +9,7 @@ on:
 jobs:
 
   build:
-
+    name: Build and Run Container
     runs-on: ubuntu-latest
 
     steps:
@@ -23,6 +23,14 @@ jobs:
         DATES: ${{ steps.date.outputs.date }}
       run: |
         docker build -t rahilwisdom/flaskimages:$DATES .
-        docker images
         docker run -d --name flask-container -p 5000:5000 rahilwisdom/flaskimages:$DATES
-        docker ps
+
+  test:
+    name: Testing
+    runs-on: ubuntu-latest
+    needs: build
+
+    steps:
+      - name: Get list of container
+        run: |
+          docker container ls
