--- a/.github/workflows/my-workflows.yml
+++ b/.github/workflows/my-workflows.yml
@@ -28,7 +28,8 @@ jobs:
   test:
     name: Testing
     runs-on: ubuntu-latest
-
+    needs: build
+    
     steps:
     - uses: actions/checkout@v3
     - name: Get current date
@@ -49,3 +50,19 @@ jobs:
     - name: Testing
       run: |
         python3 test_app.py
+
+  merge:
+    name: Automated merge if pass
+    runs-on: ubuntu-latest
+    needs: test
+
+    steps: 
+    - uses: actions/checkout@v3
+    - name: Merge pull request (if tests pass)
+      if: ${{ github.event.pull_request.merged == true }}
+      run: |
+        git config user.name github-actions
+        git config user.email github-actions@github.com
+        git checkout main
+        git merge --no-ff ${{ github.head_ref }}
+        git push -u origin main
