--- a/.github/workflows/my-workflows.yml
+++ b/.github/workflows/my-workflows.yml
@@ -42,6 +42,7 @@ jobs:
       run: |
         docker build -t rahilwisdom/flaskimages:$DATES .
         docker run -d --name flask-container -p 5000:5000 rahilwisdom/flaskimages:$DATES
+        docker container ls
 
     - name: Install Dependencies
       run: |
