--- a/.github/workflows/my-workflows.yml
+++ b/.github/workflows/my-workflows.yml
@@ -50,7 +50,7 @@ jobs:
         
     - name: Testing
       run: |
-        python3 test_app.py
+        curl http://127.0.0.1:5000/
 
   merge:
     name: Automated merge if pass
