--- a/.github/workflows/(CI)_continuous_integration.yml
+++ b/.github/workflows/(CI)_continuous_integration.yml
@@ -51,3 +51,12 @@ jobs:
     - name: Testing
       run: |
         python3 test_app.py
+
+  automerge:
+    runs-on: ubuntu-latest
+    steps:
+      - id: automerge
+        name: automerge
+        uses: "pascalgn/automerge-action@v0.15.6"
+        env:
+          GITHUB_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
