--- a/.github/workflows/(CI)_continuous_integration.yml
+++ b/.github/workflows/(CI)_continuous_integration.yml
@@ -52,18 +52,11 @@ jobs:
       run: |
         python3 test_app.py
 
-  merge:
-    name: Automated merge if pass
+  automerge:
     runs-on: ubuntu-latest
-    needs: test
-
-    steps: 
-    - uses: actions/checkout@v3
-    - name: Merge pull request (if tests pass)
-      if: ${{ github.event.pull_request.merged == true }}
-      run: |
-        git config user.name github-actions
-        git config user.email github-actions@github.com
-        git checkout main
-        git merge --no-ff ${{ github.head_ref }}
-        git push -u origin main
+    steps:
+      - id: automerge
+        name: automerge
+        uses: "pascalgn/automerge-action@v0.15.6"
+        env:
+          GITHUB_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
